--- a/src/Styles/MainStyle.css
+++ b/src/Styles/MainStyle.css
@@ -11,7 +11,8 @@
     background-color: rgb(233, 233, 233);    
 }
 .Container {
-	width: 1000px;
-	height: 1000px;
-    background-color: rgb(233, 233, 233);
+	width: 600px;
+	height: 400px;
+    border: 2px solid black;
+    background: rgb(233, 233, 233);
 }
