--- a/src/Styles/MainStyle.css
+++ b/src/Styles/MainStyle.css
@@ -15,4 +15,9 @@
 	height: 400px;
     border: 2px solid black;
     background: rgb(233, 233, 233);
+    margin: 100px 30em 2em;
+}
+
+.Button {
+    margin-left: 750px;
 }
