--- a/src/Styles/MainStyle.css
+++ b/src/Styles/MainStyle.css
@@ -11,13 +11,21 @@
     background-color: rgb(233, 233, 233);    
 }
 .Container {
-	width: 600px;
-	height: 400px;
+    position: relative;
+	min-width: 600px;
+	min-height: 400px;
+    max-width: 600px;
+    max-height: 400px;
+    display: block;    
     border: 2px solid black;
     background: rgb(233, 233, 233);
-    margin: 100px 30em 2em;
+    margin: 100px auto 0;
 }
 
 .Button {
-    margin-left: 750px;
+    position: relative;
+    top: 20px;
+    display: block;
+    text-align: center;
+    margin: auto;
 }
