--- a/src/pages/GamePage.module.css
+++ b/src/pages/GamePage.module.css
@@ -1,10 +1,10 @@
 .Container {
     position: relative;
 	min-width: 600px;
-	min-height: 400px;
     max-width: 600px;
+	min-height: 400px;
     max-height: 400px;
-    display: block;    
+    display: block;
     border: 2px solid black;
     background: rgb(233, 233, 233);
     margin: 100px auto 0;
@@ -15,4 +15,31 @@
     left: 50%;
     transform: translate(-50%, 0);
 }
+.Searchs {
+    border: 1px solid rgb(202, 202, 202);
+}
+.Bar {
+    float:  right;
+    margin: 10px;
+    color: rgb(0, 0, 0);
+    border: 1px solid rgb(201, 201, 201);
+    margin-left:auto;
+    display:block;
+    position: relative;
+    font-size: 15px;
+    padding: 8px 32px;
+    font-weight: 600;
+    text-align: center;
+}
+.menu {
+    align-content: center;
+    text-align: center;
+    position: relative;
+	min-width: 100px;	
+    max-width: 400px;
+    min-height: 250px;
+    max-height: 450px;     
+    border: 2px solid black;
     
+    
+}
