--- a/src/pages/GameMenuPage.module.css
+++ b/src/pages/GameMenuPage.module.css
@@ -1,8 +1,7 @@
-.Button {
+.button {
     margin: 100px;
 }
-
-.Bar {
+.bar {
     float:  right;
     margin: 10px;
     color: rgb(0, 0, 0);
@@ -15,19 +14,15 @@
     font-weight: 600;
     text-align: center;
 }
-.Tegs {
+.tegs {
     min-width: 100px;
     max-width: 250px;
     height: 100;    
     position: absolute;
     display: inline-block;
-    margin: 6em 2em auto 2em;
-    
-   
-    
+    margin: 6em 2em auto 2em;   
 }
-
-.Menu {
+.menu {
     min-width: 100%;    
     min-height: 100%;    
     display: inline-block;    
@@ -36,12 +31,10 @@
     margin-left: 300px;
     margin-top: 100px;
 }
-
 .Searchs {
     border: 1px solid rgb(202, 202, 202);
 
 }
-
 .All{
     height: 960px;
     background-color: rgb(238, 238, 238);    
