--- a/src/pages/SignUpPage.module.css
+++ b/src/pages/SignUpPage.module.css
@@ -2,37 +2,25 @@
     align-content: center;
     text-align: center;
     position: relative;
-	min-width: 100px;
-	min-height: 250px;
+	min-width: 100px;	
     max-width: 400px;
+    min-height: 250px;
     max-height: 450px;
-    display: block;
+    display: block;     
     border: 2px solid rgb(224, 224, 224);
-    margin: 200px auto 0;
-    
+    margin: 200px auto 0;     
 }
-
 .line {
     border-bottom: 2px solid rgb(224, 224, 224);
     min-height: 30px;
-    max-height: 100px;      
-
+    max-height: 100px;
 }
-.Button {
+.button {
     width: 90%;
-
 }
-
-.Typography {
-    align-content: center;
-    text-align: center;
-    position: relative;
-
-}
-.Bar {
+.bar {
     align-content: center;
     text-align: center;
     position: relative;
     width: 100%;
-
 }
