--- a/src/pages/GameMenuPage.module.css
+++ b/src/pages/GameMenuPage.module.css
@@ -2,11 +2,14 @@
     margin: 100px;
 }
 .bar {
+    margin-left: auto;
+}
+.barItem {
     float:  right;
     margin: 10px;
     color: rgb(0, 0, 0);
-    border: 1px solid rgb(201, 201, 201);
-    margin-left:auto;
+    /* border: 1px solid rgb(201, 201, 201);
+    margin-left:auto; */
     display:block;
     position: relative;
     font-size: 15px;
