--- a/src/pages/GamePage.module.css
+++ b/src/pages/GamePage.module.css
@@ -18,18 +18,21 @@
 .searchs {
     border: 1px solid rgb(202, 202, 202);
 }
-.bar {
-    float:  right;
+.barItem {
+    float: right;
     margin: 10px;
     color: rgb(0, 0, 0);
-    border: 1px solid rgb(201, 201, 201);
-    margin-left:auto;
-    display:block;
+    /* border: 1px solid rgb(201, 201, 201); */
+    /* margin-left: auto; */
+    display: block;
     position: relative;
     font-size: 15px;
     padding: 8px 32px;
     font-weight: 600;
     text-align: center;
+}
+.bar {
+    margin-left: auto;
 }
 .menu {
     align-content: center;
