--- a/src/pages/GamePage.module.css
+++ b/src/pages/GamePage.module.css
@@ -1,29 +1,7 @@
-.container {
-    position: relative;
-	min-width: 600px;
-    max-width: 600px;
-	min-height: 400px;
-    max-height: 400px;
-    display: block;
-    border: 2px solid black;
-    background: rgb(233, 233, 233);
-    margin: 100px auto 0;
-}
-
-.button {
-    position: relative;
-    left: 50%;
-    transform: translate(-50%, 0);
-}
-.searchs {
-    border: 1px solid rgb(202, 202, 202);
-}
 .barItem {
     float: right;
     margin: 10px;
     color: rgb(0, 0, 0);
-    /* border: 1px solid rgb(201, 201, 201); */
-    /* margin-left: auto; */
     display: block;
     position: relative;
     font-size: 15px;
@@ -34,13 +12,56 @@
 .bar {
     margin-left: auto;
 }
-.menu {
-    align-content: center;
+.menu{
+
     text-align: center;
     position: relative;
-	min-width: 100px;	
-    max-width: 400px;
-    min-height: 250px;
-    max-height: 450px;     
-    border: 2px solid black;    
+	min-width: 300px;	
+    max-width: 1250px;
+    min-height: 700px;
+    max-height: 700px;
+    display: block;     
+    border: 2px solid rgb(224, 224, 224);
+    margin: 90px auto 0;    
+}
+.maininf{
+
+    text-align: center;
+    position: relative;
+	min-width: 1000px;	
+    max-width: 1250px;
+    min-height: 400px;
+    max-height: 400px;
+    display: inline-block;     
+    border: 2px solid rgb(224, 224, 224);
+    margin-top: 30px;   
+    margin-bottom: 30px; 
+}
+
+.text {
+    float: right;
+    border: 2px solid rgb(224, 224, 224);
+    min-width: 400px;	
+    max-width: 450px;
+    min-height: 400px;
+    max-height: 400px;
+    
+
+}
+.button {
+    width: 80%;
+    height: 50px;
+    float: inline-end;
+}
+.about {
+    border: 2px solid rgb(224, 224, 224);
+    min-width: 400px;	
+    max-width: 450px;
+    display: inline-block;  
+    min-width: 1000px;	
+    max-width: 1250px;    
+    text-align: center;
+    position: relative;
+
+
 }
