--- a/src/pages/GamePage.module.css
+++ b/src/pages/GamePage.module.css
@@ -1,67 +1,152 @@
-.barItem {
-    float: right;
-    margin: 10px;
-    color: rgb(0, 0, 0);
+:root {
+    --captions-font: "Roboto" sans-serif;
+}
+
+body {
+    background-color: #f4f4f4;
+}
+
+.wrapper {
+    display: flex;
+    max-width: 1000px;
+    padding-top: 45px;
+    margin: 0 auto;
+}
+
+.content {
+    display: grid;
+    row-gap: 20px;
+    box-shadow: 0 0 10px -4px black;
+    background-color: white;
+    padding: 40px 60px 200px 60px;
+}
+
+.topBlock {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.caption {
+    color: grey;
+}
+
+.cover {
+    flex: 2;
+}
+
+.cover img {
     display: block;
-    position: relative;
-    font-size: 15px;
-    padding: 8px 32px;
-    font-weight: 600;
-    text-align: center;
-}
-.bar {
-    margin-left: auto;
-}
-.menu{
-
-    text-align: center;
-    position: relative;
-	min-width: 300px;	
-    max-width: 1250px;
-    min-height: 700px;
-    max-height: 700px;
-    display: block;     
-    border: 2px solid rgb(224, 224, 224);
-    margin: 90px auto 0;    
-}
-.maininf{
-
-    text-align: center;
-    position: relative;
-	min-width: 1000px;	
-    max-width: 1250px;
-    min-height: 400px;
-    max-height: 400px;
-    display: inline-block;     
-    border: 2px solid rgb(224, 224, 224);
-    margin-top: 30px;   
-    margin-bottom: 30px; 
+    width: 100%;
 }
 
-.text {
-    float: right;
-    border: 2px solid rgb(224, 224, 224);
-    min-width: 400px;	
-    max-width: 450px;
-    min-height: 400px;
-    max-height: 400px;
-    
-
+.gameData {
+    display: flex;
+    flex-flow: column wrap;
+    flex-basis: 350px;
+    margin-left: 20px;
 }
-.button {
-    width: 80%;
-    height: 50px;
-    float: inline-end;
-}
-.about {
-    border: 2px solid rgb(224, 224, 224);
-    min-width: 400px;	
-    max-width: 450px;
-    display: inline-block;  
-    min-width: 1000px;	
-    max-width: 1250px;    
-    text-align: center;
-    position: relative;
 
-
+.competencies *:nth-child(n) {
+    margin-right: 3px;
 }
+
+.ratingContainer {
+    display: flex;
+    align-items: center;
+    margin-top: auto;
+}
+
+.ratingCaption {
+    margin-left: 10px;
+}
+
+.gameButtonsContainer {
+    display: grid;
+    grid-template-columns: 1fr 70px;
+    gap: 10px;
+    margin-top: auto;
+}
+
+.playButtonLink {
+    text-decoration: none;
+}
+
+.playButton {
+    width: 100%;
+    background-color: green !important;
+}
+
+.settingsButtonLink {
+    text-decoration: none;
+}
+
+.settingsButton {
+    width: 100%;
+    background-color: blue !important;
+}
+
+.blockCaption {
+    font-family: var(--captions-font);
+    font-size: 30px;
+    font-weight: bold;
+    margin: 0;
+    margin-bottom: 5px;
+}
+
+.descriptionContainer {
+}
+
+.description {
+    color: #403E3F;
+    overflow-wrap: break-word;
+    text-overflow: ellipsis;
+}
+
+.name {
+    line-height: 20px;
+    order: -1;
+    font-family: "Roboto" sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+    margin: 0;
+    text-overflow: ellipsis;
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
+}
+
+@media (max-width: 1000px) {
+    .header .logo {
+        margin-left: 15px;
+        font-family: "Roboto" sans-serif;
+        font-size: 30px;
+        font-weight: bold;
+        text-decoration: none;
+        color: black;
+    }
+    .content {
+        padding: 0;
+        padding-bottom: 200px;
+    }
+    .topBlock {
+        flex-direction: column;
+    }
+    .gameData {
+        margin: 0;
+        margin-top: 20px;
+        flex-basis: initial;
+    }
+    .ratingContainer { 
+        flex-direction: row-reverse;
+        position: absolute;
+        right: 18px;
+        margin: 0;
+    }
+    .gameButtonsContainer {
+        display: none;
+        margin-top: 20px;
+    }
+    .middle {
+        padding: 20px;
+    }
+}
+
