--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -12,9 +12,91 @@
 
 .logo {
     margin-left: 15px;
+    margin-right: auto;
     font-family: "Roboto" sans-serif;
     font-size: 30px;
     font-weight: bold;
     text-decoration: none;
     color: black;
+}
+
+.userContainer {
+    display: flex;
+    padding: 5px 10px;
+    align-items: center;
+    margin-right: 5px;
+    border-radius: 50px;
+    transition: background 200ms linear;
+}
+
+.userContainer:hover {
+    cursor: pointer;
+    background-color: #FAFAFA;
+}
+
+.login {
+    font-weight: bold;
+    margin-right: 10px;
+}
+
+.avatar {
+    margin-right: 5px;
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.avatar img {
+    width: 100%;
+    height: 100%;
+}
+
+.menu {
+    width: fit-content;
+    height: fit-content;
+    padding: 0;
+    border-radius: 50%;
+    border: none;
+    background-color: transparent;
+}
+
+.menuIcon {
+    display: block;
+    transform-origin: center;
+    transition: 100ms linear !important;
+}
+
+.userContainer:hover .menuIcon {
+    transform: scale(1.5, 1.5);
+}
+
+.exitText {
+    font-weight: 500;
+    color: #CA1701;
+}
+
+.menuListContainer {
+    background-color: white;
+}
+
+.authButtonsContainer {
+    margin-right: 15px;
+}
+
+.signInButton, .signUpButton {
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.signInButton {
+    margin-right: 5px;
+}
+
+.signInButton button {
+    background-color: steelBlue !important;
+}
+
+.signUpButton button {
+    background-color: green !important;
 }
