--- a/src/components/Competence.module.css
+++ b/src/components/Competence.module.css
@@ -2,6 +2,9 @@
     display: inline-block;
     padding: 0 10px;
     border-radius: 40px;
+    align-content: center;
+    text-align:center;
+    margin: auto 2px 12px auto;
 }
 
 .competenceLink {
