--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,4 +1,4 @@
-.container {
+header {
     z-index: 99;
     position: fixed;
     display: flex;
@@ -8,6 +8,11 @@
     width: 100%;
     height: 45px;
     box-shadow: 0 2px 2px 0px #bfbfbf;
+}
+
+.spacer {
+    width: 100%;
+    height: 45px;
 }
 
 .logo {
