--- a/src/pages/GamePage.module.css
+++ b/src/pages/GamePage.module.css
@@ -70,13 +70,13 @@ body {
 }
 
 .gameButtonsContainer {
-    display: grid;
-    grid-template-columns: 1fr 70px;
-    gap: 10px;
+    display: flex;
     margin-top: auto;
 }
 
 .playButtonLink {
+    display: block;
+    width: 100%;
     text-decoration: none;
 }
 
@@ -86,6 +86,8 @@ body {
 }
 
 .settingsButtonLink {
+    display: block;
+    margin-left: 10px;
     text-decoration: none;
 }
 
@@ -145,6 +147,9 @@ body {
         position: absolute;
         right: 18px;
         margin: 0;
+    }
+    .gameButtonContainerPlay {
+        display: none;
     }
     .gameButtonsContainer {
         display: none;
