--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -18,7 +18,7 @@ header {
 .logo {
     margin-left: 15px;
     margin-right: auto;
-    font-family: "Roboto" sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 30px;
     font-weight: bold;
     text-decoration: none;
