--- a/src/pages/GamesPage.module.css
+++ b/src/pages/GamesPage.module.css
@@ -5,25 +5,13 @@
     justify-content: space-between;
 }
 .mainmenu {
-    min-height: 95vh;
-    width: 100%;
-    flex: 1 1 auto;
-    margin: 0 2em auto auto;
+    flex: 1 1 auto;    
     display: flex;
     flex-direction: row;    
 }
-.tags {
-    flex-grow: 1;
-    min-width: 265px;
-    max-width: 265px;
-    margin: 1em 2em auto 24px;
-}
-.menu {
-    flex-grow: 10;    
+.menu {    
     background-color: rgb(255, 255, 255);    
     border: 2px solid rgb(207, 207, 207);
-    
-    
 }
 .menuButton{
     display: flex;
@@ -32,14 +20,14 @@
     justify-content: space-between;
 }
 
-.recommend {
-    flex-grow: 10;    
+.recommend {       
     background-color: rgb(255, 255, 255);    
     margin-top: 20px;    
-    display: flex;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 .allgame {
-    flex-grow: 10;    
+    flex-grow: 10;
     background-color: rgb(255, 255, 255);    
     margin-top: 20px;    
     display: flex;
