--- a/src/components/Competence.module.css
+++ b/src/components/Competence.module.css
@@ -1,13 +1,15 @@
 .container {
+    cursor: pointer;
     display: inline-block;
-    padding: 0 10px;
+    padding: 2px 10px;
     border-radius: 40px;
     align-content: center;
     text-align:center;
     margin: auto 2px 12px auto;
 }
 
-.competenceLink {
+.competence {
     text-decoration: none;
     color: white;
+    font-weight: bold;
 }
