--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -2,9 +2,12 @@
     --avatar-size: 28px;
     --avatar-border-radius: 50%;
     --exit-text-color: #CA1701;
-    --signInButton-background-color: steelBlue !important;
-    --signUpButton-background-color: green !important;
+    --signInButton-background-color: #84DCC6 !important;
+    --signInButton-color: black;
+    --signUpButton-background-color: var(--header-color) !important;
     --login-font-size: initial;
+    --login-color: white;
+    --menuIcon-color: white;
 }
 
 @import "../styles/variables.css";
@@ -47,10 +50,11 @@ header {
 
 .userContainer:hover {
     cursor: pointer;
-    background-color: #FAFAFA;
+    /* background-color: #FAFAFA; */
 }
 
 .login {
+    color: var(--login-color);
     font-size: var(--login-font-size);
     font-weight: bold;
     margin-right: 10px;
@@ -82,6 +86,7 @@ header {
     display: block;
     transform-origin: center;
     transition: 100ms linear !important;
+    color: var(--menuIcon-color);
 }
 
 .userContainer:hover .menuIcon {
@@ -112,8 +117,17 @@ header {
 
 .signInButton button {
     background-color: var(--signInButton-background-color);
+    color: black;
+    font-weight: bold;
+}
+
+.signInButton button:hover {
+    background-color: white;
 }
 
 .signUpButton button {
     background-color: var(--signUpButton-background-color);
+}
+
+.signInButton button:hover {
 }
