--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -38,10 +38,9 @@ element.style {
     width: 100px;
 }
 .image{
-    width: 200px;
-    height: 220px;
+    width: 276px;
+    height: 185px;
     position: relative;
-    padding: 10px;
     margin-right: 20px; 
     align-content: center;    
 }
@@ -51,4 +50,8 @@ element.style {
     width: 100%;
     background-color: rgba(0, 0, 0, 0.616);
     color: white;    
+}
+.avatar{
+    width: 100%;
+    height: 100%;
 }
