--- a/src/pages/GamesPage.module.css
+++ b/src/pages/GamesPage.module.css
@@ -12,6 +12,8 @@
 .menu {    
     background-color: rgb(255, 255, 255);    
     border: 2px solid rgb(207, 207, 207);
+    width: 100%;
+    height: 100%;
 }
 .menuButton{
     display: flex;
