--- a/src/layouts/MainLayout.module.css
+++ b/src/layouts/MainLayout.module.css
@@ -1,17 +1,15 @@
-.root 
-{
+.root {
     display :flex;
     width: 100vw;
     height: 100vh;
 
 }
-.content
-{   
+
+.content {   
     margin-top: 45px;
     display: flex;
     flex-direction: row;
     width: 100%;
-
 }
 
 .sidePage
