--- a/src/layouts/PageLayout.module.css
+++ b/src/layouts/PageLayout.module.css
@@ -1,15 +1,12 @@
-.root 
-{
-    display :flex;
+.root {
+    display: flex;
     width: 100vw;
     height: 100vh;
-
 }
-.content
-{   
+
+.content {   
     margin-top: 45px;
     display: flex;
     flex-direction: row;
     width: 100%;
-
 }
