--- a/src/pages/GamesPage.module.css
+++ b/src/pages/GamesPage.module.css
@@ -1,20 +1,35 @@
+@import "../styles/variables.css";
+
+.content {
+    display: grid;
+    grid-template-columns: 300px 1fr;
+}
+
+.games {
+    background-color: white;
+    height: calc(100vh - var(--header-height))
+}
+
 .allbar{
     display: flex;
     flex-direction: row;
     align-content: center;
     justify-content: space-between;
 }
+
 .mainmenu {
     flex: 1 1 auto;    
     display: flex;
     flex-direction: row;    
 }
+
 .menu {    
     background-color: rgb(255, 255, 255);    
     border: 2px solid rgb(207, 207, 207);
     width: 100%;
     height: 100%;
 }
+
 .menuButton{
     display: flex;
     flex-direction: row;
@@ -27,6 +42,7 @@
     margin-top: 20px;
     display: flex;
 }
+
 .allgame {
     flex-grow: 5;
     background-color: rgb(255, 255, 255);    
