--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -5,4 +5,5 @@
     --logo-color: white;
     --logo-font-family: "Roboto", sans-serif;
     --logo-font-size: 30px;
+    --block-box-shadow: 0 0 10px -5px black;
 }
