--- a/src/components/GameCard.module.css
+++ b/src/components/GameCard.module.css
@@ -1,26 +1,44 @@
-.ratingIcon {
-    float: left;
-}
-
-.rating {
-    float: right;
-}
-
-.image{
-    width: 276px;
-    height: 185px;
+.card {
     position: relative;
-    margin-right: 20px; 
-    align-content: center;
-    border-radius: 25px;  
+    min-width: 300px;
+    overflow: hidden;
+    border-radius: 5px;
 }
-.content{
-    position: absolute;
-    bottom: 0;
+
+.coverLink {
+    display: block;
+}
+
+.cover {
+    display: block;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.616);
-    color: white;       
 }
+
+.contentWrapper {
+    position: absolute;
+    display: flex;
+    flex-flow: column-reverse;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 5px;
+}
+
+.content {
+    box-sizing: border-box;
+    width: 100%;
+    height: fit-content;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.616);
+    border-radius: 5px;
+}
+
+.name { 
+    margin: 0;
+    color: white;
+}
+
 .avatar{
     width: 100%;
     height: 100%;
