--- a/src/pages/GamesPage.module.css
+++ b/src/pages/GamesPage.module.css
@@ -1,15 +1,16 @@
-@import "../styles/variables.css";
-
-.wrapper {
-    box-sizing: border-box;
-    padding: 10px;
-    min-height: calc(100% - var(--header-height));
-    width: 100%;
+:root {
+    --gamesSection-spacing: 10px;
+    --gamesSectionCaption-spacing: 10px;
+    --gamesGrid-minCardSize: 300px;
+    --carouselCard-width: 500px;
 }
+
+@import "../styles/variables.css";
 
 .pageGrid {
     display: grid;
-    grid-gap: 10px;
+    grid-gap: var(--block-spacing);
+    min-height: 100%;
 }
 
 @media (min-width: 1000px) {
@@ -18,56 +19,52 @@
     }
 }
 
+.sideBar {
+    display: flex;
+    flex-flow: column nowrap;
+}
+
 @media (max-width: 1000px) {
-    .competenciesList {
+    .sideBar {
         order: 99;
     }
 }
 
+.competenciesList {
+    position: sticky;
+    top: 0;
+}
+
 .content {
-    min-height: 100vh;
-    background-color: white;
-    overflow: hidden;
-    border-radius: 5px;
-    box-shadow: var(--block-box-shadow);
+    height: 100%;
 }
 
-.games {
-    background-color: white;
-    min-height: 100%;
-}
-
-.gamesBlock {
-    margin-bottom: 10px;
-}
-
-.gamesWrapper {
-    box-sizing: border-box;
-    padding: 10px;
+.gamesSection {
+    margin-bottom: var(--gamesSection-spacing);
 }
 
 .showAll {
     color: black;
 }
 
-.gamesBlockCaptionWrapper {
+.gamesSectionCaptionWrapper {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 10px;
+    margin-bottom: var(--gamesSectionCaption-spacing);
 }
 
-.gamesBlockCaption {
+.gamesSectionCaption {
     margin: 0;
 }
 
 .gamesGrid {
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(var(--gamesGrid-minCardSize), 1fr));
 }
 
 .carouselCard {
     max-width: 100%;
-    width: 500px;
+    width: var(--carouselCard-width);
     margin-right: 10px;
 }
