--- a/src/pages/PlayPage.module.css
+++ b/src/pages/PlayPage.module.css
@@ -1,7 +1,7 @@
 @import "../styles/variables.css";
 
 .wrapper {
-    height: calc(100vh - var(--header-height)); 
+    height: 100%;
     width: 100%;
 }
 
