--- a/src/pages/SignInPage.module.css
+++ b/src/pages/SignInPage.module.css
@@ -3,7 +3,7 @@
     flex-flow: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
 }
 
 .signInForm {
