--- a/src/pages/GamePage.module.css
+++ b/src/pages/GamePage.module.css
@@ -156,10 +156,10 @@
         line-height: initial;
     }
     .ratingContainer { 
-        flex-direction: row-reverse;
         position: absolute;
-        right: 18px;
+        left: 18px;
         margin: 0;
+        margin-top: 30px;
     }
     .ratingCaption {
         margin-left: 0;
