--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 body, html, #root {
-    height: 100vh;
-    min-height: 100vh;
+    height: 100%;
+    min-height: 100%;
+}
+
+h1 {
+    margin: 0;
 }
 
 body {
