--- a/src/pages/CreateGamePage.module.css
+++ b/src/pages/CreateGamePage.module.css
@@ -13,15 +13,18 @@
     position: relative;
     top: -9px;
     display: grid;
-    gap: 50px;
+    column-gap: 50px;
+    row-gap: 30px;
     grid-template-areas:
         "cover name"
         "description description"
-        "members files";
+        "members files"
+        "upload upload";
     grid-template-columns: auto 1fr;
+    padding-bottom: 20px;
 }
 
-.gameCoverBlock {
+.cover {
     grid-area: "cover";
     width: 560px;
     height: 350px;
@@ -29,14 +32,19 @@
     margin-left: 125px;
 }
 
-.cover {
+.cover__content {
     margin-top: 5px;
     height: 315px;
     border-radius: 5px;
     border: 2px solid #95a3b3;
 }
 
-.gameInfoBlock {
+.cover__image {
+    width: 100%;
+    height: 100%;
+}
+
+.info {
     grid-area: "name";
     height: 100px;
     width: 390px;
@@ -44,7 +52,7 @@
     margin-right: 125px;
 }
 
-.gameName {
+.info__name__form {
     margin-top: 5px;
     height: 46px;
     border: 2px solid #95a3b3;
@@ -52,11 +60,11 @@
     border-radius: 5px;
 }
 
-.gameСompetenciesBlock {
+.competencies {
     margin-top: 40px;
 }
 
-.competenciesSearch {
+.competencies__search {
     margin-top: 5px;
     height: 203px;
     border: 2px solid #95a3b3;
@@ -64,17 +72,80 @@
     border-radius: 5px;
 }
 
-.descriptionBlock {
+.competencies__search__field {
+    border: 2px solid #95a3b3;
+    border-radius: 5px;
+    margin: 5px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.description {
     grid-area: "description";
     margin-left: 125px;
     grid-column: 1 / 3;
     width: 1000px;
 }
 
-.descriptionInput {
+.description__input {
     margin-top: 5px;
     height: 214px;
     border: 2px solid #95a3b3;
     box-sizing: border-box;
     border-radius: 5px;
+}
+
+.members {
+    margin-left: 125px;
+    grid-area: 'members';
+}
+
+.members__list {
+    margin-top: 5px;
+    width: 475px;
+    height: 290px;
+    border: 2px solid #95a3b3;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+
+.files {
+    grid-area: 'files';
+    margin-left: -85px;
+}
+
+.files__list {
+    margin-top: 5px;
+    width: 475px;
+    height: 290px;
+    border: 2px solid #95a3b3;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+
+.upload {
+    margin-left: 125px;
+    grid-column: 1 / 3;
+    grid-area: 'upload';
+}
+
+.upload__button {
+    z-index: 100;
+    width: 1000px;
+    height: 45px;
+    border: none;
+    border-radius: 5px;
+}
+
+.inputForm {
+    width: 100%;
+    height: 100%;
+}
+
+.uploadForm {
+    display: none;
+}
+
+.choosenFile {
+
 }
