--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -10,4 +10,5 @@
     --block-padding: 10px;
     --block-spacing: 10px;
     --block-border-radius: 5px;
+    --main-font-family: "Roboto", "Arial", sans-serif;
 }
