--- a/src/pages/CreateGamePage.module.css
+++ b/src/pages/CreateGamePage.module.css
@@ -72,7 +72,7 @@
     border-radius: 5px;
 }
 
-.competencies__search__field {
+.search__field {
     border: 2px solid #95a3b3;
     border-radius: 5px;
     margin: 5px;
@@ -123,9 +123,13 @@
     border-radius: 5px;
 }
 
+.files__list__item__cover {
+    margin-left: 10px;
+}
+
 .files__list__item {
     display: flex;
-    margin: 0 7px;
+    margin: 10px 7px;
 }
 
 .file__list__button {
