--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -11,4 +11,6 @@
     --block-spacing: 10px;
     --block-border-radius: 5px;
     --main-font-family: "Roboto", "Arial", sans-serif;
+    /* Colors */
+    --grey-01: #F2F2F2;
 }
