--- a/src/components/CompetenciesSelector.module.css
+++ b/src/components/CompetenciesSelector.module.css
@@ -38,7 +38,7 @@
 .participant {
     column-gap: 10px;
     display: grid;
-    grid-template-columns: 50px 1fr 1fr 50px;
+    grid-template-columns: 1fr 50px;
     height: 50px;
     margin: 0;
     padding: 0;
