--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -11,6 +11,8 @@
     --block-spacing: 10px;
     --block-border-radius: 5px;
     --main-font-family: "Roboto", "Arial", sans-serif;
+    --page-width: 1000px;
+    --page-padding: 60px;
     /* Colors */
     --grey-01: #F2F2F2;
 }
