--- a/src/components/CompetenciesSelector.module.css
+++ b/src/components/CompetenciesSelector.module.css
@@ -24,21 +24,17 @@
 .selectedParticipants__list {
     display: flex;
     flex-flow: column nowrap;
+    align-items: flex-start;
     gap: 5px;
     margin: 0;
     overflow-y: auto;
     padding: 0;
 }
 
-.selectedParticipants__participant:hover {
-    background-color: var(--grey-01);
-}
-
 .participant {
     column-gap: 10px;
-    display: grid;
-    grid-template-columns: 1fr 50px;
-    height: 50px;
+    display: flex;
+    justify-content: space-between;
     margin: 0;
     padding: 0;
     width: 100%;
