--- a/src/components/FileUploaderBase.module.css
+++ b/src/components/FileUploaderBase.module.css
@@ -1,8 +1,12 @@
 .fileUploaderBase {
+    position: relative;
     width: 100%;
     height: 100%;
 }
 
 .fileUploaderBase__input {
-    display: none;
+    position: absolute;
+    opacity: 0;
+    width: 1px;
+    height: 1px;
 }
