--- a/src/pages/GamePublishPage/CoverUploader.module.css
+++ b/src/pages/GamePublishPage/CoverUploader.module.css
@@ -5,6 +5,10 @@
     width: 100%;
 }
 
+.coverUploader:focus {
+    border-color: red;
+}
+
 .coverUploader::before {
     content: "";
     display: block;
