--- a/frontend/src/pages/GamesPage/GamesPage.module.css
+++ b/frontend/src/pages/GamesPage/GamesPage.module.css
@@ -5,7 +5,7 @@
     --carouselCard-width: 500px;
 }
 
-@import "../styles/variables.css";
+@import "../../styles/variables.css";
 
 .pageGrid {
     display: grid;
