--- a/frontend/src/pages/UserProfilePage.module.css
+++ b/frontend/src/pages/UserProfilePage.module.css
@@ -2,3 +2,40 @@
     width: 50px;
     height: 50px;
 }
+
+.personInfoLabel{
+    padding: 5px;
+}
+
+.avatarContainer{
+    width: 80px;
+    display: table-row;
+}
+
+.avatar{
+    padding: 10px;
+    background-color: lightgray;
+    border-radius: 10px;
+    margin: 10px;
+}
+
+.infoContainer{
+    width: 100%;
+}
+
+.info{
+    margin-left: 30px;
+    background-color: lightgray;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.cContainer{
+    width: 50%;
+    max-height: fit-content;
+    min-height: 60px;
+}
+
+.createdAndCompetenceTable{
+    width: 100%;
+}
