--- a/frontend/src/components/CompetenciesList.module.css
+++ b/frontend/src/components/CompetenciesList.module.css
@@ -18,10 +18,7 @@
 .competenciesContainer {
     margin-top: 5px;
     display: flex;
-    flex-flow: column;
+    flex-flow: row wrap;
     gap: 5px;
     width: 100%;
-    overflow-y: scroll;
-    max-height: 120px;
 }
-
