--- a/frontend/src/pages/UserProfilePage.module.css
+++ b/frontend/src/pages/UserProfilePage.module.css
@@ -3,40 +3,42 @@
     height: 50px;
 }
 
-.personInfoLabel{
+.personInfoLabel {
     padding: 5px;
 }
 
-.avatarContainer{
+.avatarContainer {
     width: 80px;
     display: table-row;
 }
 
-.avatar{
+.avatar {
     padding: 10px;
     background-color: lightgray;
     border-radius: 10px;
     margin: 10px;
 }
 
-.infoContainer{
+.infoContainer {
     width: 100%;
 }
 
-.info{
+.info {
     margin-left: 30px;
     background-color: lightgray;
     padding: 10px;
     border-radius: 10px;
 }
 
-.cContainer{
+.cContainer {
     width: 50%;
     max-height: fit-content;
     min-height: 60px;
+    margin: 10px;
+    flex: 0 0 47%;
 }
 
-.createdAndCompetenceTable{
+.createdAndCompetenceTable {
     width: 100%;
 }
 
@@ -47,7 +49,23 @@
     gap: 5px;
     width: 100%;
     overflow-y: scroll;
-    max-height: 120px;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    max-height: calc(100vh - 320px - 80px);
+}
+
+.cWrapper::-webkit-scrollbar {
+    display: none;
+}
+
+.cRow {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    justify-content: center;
+    min-width: 100%;
 }
 
 .cTitle {
