Add delete button for admin users

--- a/frontend/src/pages/UserProfilePage.module.css
+++ b/frontend/src/pages/UserProfilePage.module.css
@@ -54,3 +54,9 @@
     margin: 0;
     text-align: center;
 }
+
+.deleteButtonWrapper {
+    display: flex;
+    justify-content: flex-end;
+    color: red;
+}
